--- a/src/app/comun/dialogos/dialogos.component.html
+++ b/src/app/comun/dialogos/dialogos.component.html
@@ -145,24 +145,6 @@
     </div>
 </div>
 
-<!--   ************************************ -->
-<!--         DIALOGOS INTRODUCIR DATOS      -->
-<!--   ************************************ -->
-<div *ngIf="data.tipoDialogo == 'IntroduccionDatos'" class= "contenedor">
-    <h1 mat-dialog-title class= title>{{data.titulo}}</h1>
-    <div mat-dialog-content>
-      <p>{{data.contenido}}</p>
-      <mat-form-field>
-        <mat-label>{{data.inputLabel}}</mat-label>
-        <input matInput [(ngModel)]="data.input">
-      </mat-form-field>
-    </div>
-    <div mat-dialog-actions class= "botones">
-      <button mat-button class = "ajustesOpcion Cancel" [mat-dialog-close]>Cancel</button>
-      <button mat-button class = "ajustesOpcion OK" [mat-dialog-close]="data.input" cdkFocusInitial>OK</button>
-    </div>
-</div>
-
 <!--   ******************************* -->
 <!--      DIALOGO DIALOGO PERSONAJES      -->
 <!--   ******************************* -->
@@ -173,43 +155,47 @@
     <div class="contenedorCentral">
 
         <!-- TEXTO -->
-        <div class="contenedorTexto">
-            <div class="contenedorTitulo texto">
-                <h1 class="title Texto2">Titulo Dialogo</h1>
+        <div class="contenedorTexto borde1 FondoPapiro" (click)="nextDialogo()">
+            <div class="contenedorTitulo">
+                <h1 class="title Texto1">{{data.titulo}}</h1>
             </div>
-            <div class="textoDialogo texto Texto3"> {{data.contenido}} </div>
-            <frameComponent [tipoFondo]="'papiro'"></frameComponent>
+
+            <div class="textoDialogo Texto2 Arial" [innerHtml]="textosDialogo[indexTextoMostrado]"></div>
+            <botonComponent *ngIf="this.opciones.length == 0" class="botonSiguiente Arial" mat-button  (click)="nextDialogo()" [tipoBoton]="2" [texto]="'Siguiente'" [vacio]="false" [color]="'naranja'"></botonComponent>
             <img class="decoracion" src="../../../assets/ui/decor/dcr_04.png"/>
+            <!--
             <div class="contenedorBandera izquierda">
                 <img src="../../../assets/ui/banners/bn_01_3.png"/>
                 <img src="../../../assets/ui/banners/bn_01_2.png"/>
             </div>
+            -->
+
         </div>
 
         <!-- Opciones -->
         <div class="contenedorOpciones">
-            <div *ngFor="let opcion of data.opciones; let i = index" class="opcion">
-                <botonComponent class="botonOpcion" mat-button  [mat-dialog-close]="i" [tipoBoton]="2" [texto]="opcion" [vacio]="true" [color]="'rojo'"></botonComponent>
+            <div *ngFor="let opcion of opciones; let i = index" class="opcion">
+                <botonComponent class="botonOpcion Arial" mat-button  [mat-dialog-close]="i" [tipoBoton]="2" [texto]="opcion.textoOpcion" [vacio]="true" [color]="'rojo'"></botonComponent>
             </div>
         </div>
 
     </div> <!-- Fin contenedor Central -->
 
     <!-- PERSONAJE 1 -->
-    <div *ngIf="data.personajeIzquierda.mostrar" class="contenedorPersonaje primero">
-      <img src="../../../assets/Personajes/{{data.personajeIzquierda.tipo}}/{{data.personajeIzquierda.imagenIndex}}.png"/>
+    <div *ngIf="data.mostrarPersonajeIzquierda" class="contenedorPersonaje primero">
+      <img src="../../../assets/Personajes/{{data.tipoPersonajeIzquierda}}/{{data.imagenPersonajeIzquierda}}.png"/>
         <div class="placaNombre">
             <img src="../../../assets/ui/paper/ppr_05.png"/>
-            <div class="nombrePersonaje Texto2">{{data.personajeIzquierda.nombre}}</div>
+            <div class="nombrePersonaje Texto1">{{data.nombrePersonajeIzquierda}}</div>
         </div>
     </div>
 
     <!-- PERSONAJE 2 -->
-    <div *ngIf="data.personajeDerecha.mostrar" class="contenedorPersonaje segundo">
-        <img class="Flip" src="../../../assets/Personajes/{{data.personajeDerecha.tipo}}/{{data.personajeDerecha.imagenIndex}}.png"/>
+    <div *ngIf="data.mostrarPersonajeDerecha" class="contenedorPersonaje segundo">
+        <img class="Flip" src="../../../assets/Personajes/{{data.tipoPersonajeDerecha}}/{{data.imagenPersonajeDerecha}}.png"/>
         <div class="placaNombre">
             <img src="../../../assets/ui/paper/ppr_05.png"/>
-            <div class="nombrePersonaje Texto2">{{data.personajeDerecha.nombre}}</div>
+            <div class="nombrePersonaje Texto1">{{data.nombrePersonajeDerecha}}</div>
         </div>
     </div>
 
