--- a/src/app/comun/desarrollador/formEventosComponent/formEventos.component.sass
+++ b/src/app/comun/desarrollador/formEventosComponent/formEventos.component.sass
@@ -9,7 +9,6 @@
   top: 102%
   left: 45%
 
-
 .botonAddLista
     position: absolute
     display: flex
@@ -139,6 +138,12 @@
         mat-form-field
           width: 80%
           left: 10%
+      .contenedorTipoOrdenDialogo
+        display: grid
+        align-items: center
+        mat-form-field
+          width: 90%
+          left: 5%
     
     .contenedorSubLista
       position: absolute
@@ -168,6 +173,23 @@
       .seleccionado
           background-color: white
 
+    .contenedorBotonesOrdenarOrdenes
+      position: absolute
+      display: flex
+      width: 20%
+      height: 10%
+      bottom: 0
+      left: 5%
+      justify-content: space-around
+      .imagenSubir
+        transform: rotate(90deg)
+        &:hover
+          filter: invert(1)
+      .imagenBajar
+        transform: rotate(-90deg)
+        &:hover
+          filter: invert(1)
+
     .botonAdd
       position: absolute
       width: 25%
@@ -196,5 +218,14 @@
       &:hover
         filter: invert(1)
 
+.textoOpcion
+  width: 70%
+.encadenadoOpcion
+  width: 15%
+.botonEliminarOpcion
+  position: relative
+  width: 5%
+  &:hover
+    filter: invert(1)
 
 
