--- a/src/app/comun/dialogos/dialogos.component.sass
+++ b/src/app/comun/dialogos/dialogos.component.sass
@@ -166,6 +166,7 @@
           height: 75%
           align-items: center
           justify-content: center
+
     .contenedorCentral
       position: absolute
       display: flex
@@ -184,8 +185,9 @@
         align-items: center
         width: 100%
         margin-top: 10%
-        margin-bottom: 5%
         color: black
+        padding: 3%
+
         .texto
           position: relative
           z-index: 2
@@ -196,21 +198,21 @@
           position: relative
           z-index: 2
           width: 90%
-          margin: 20px 0
+          margin-top: 5px
           text-align: center
           background-image: url("../../../assets/ui/paper/ppr_01.png")
           background-size: 100% 100%
-          h1
-        frameComponent
-          position: absolute
-          z-index: 1
-          width: 100%
-          height: 100%
-          top: 0
+        .textoDialogo
+          padding: 3%
+        .botonSiguiente
+          position: relative 
+          width: 30%
+          height: 10vh
         .decoracion
           position: absolute
           height: 20%
           top: -20%
+          z-index: -1
         .contenedorBandera
           position: absolute
           width: 38%
@@ -232,12 +234,14 @@
         justify-content: center
         flex-wrap: wrap
         width: 100%
-        height: 30%
+        height: inherit 
+        padding: 5% 0
         .opcion
           position: relative
           color: $colorTexto
           width: 100%
           margin: 5px 0px
+          max-height: 10vh
 
 // MENSAJE NARRADOR IMG:
 #narradorImg
