Creación de LogicService

--- a/src/app/comun/desarrollador/formEventosComponent/formEventos.component.html
+++ b/src/app/comun/desarrollador/formEventosComponent/formEventos.component.html
@@ -281,6 +281,7 @@
                                 <mat-select formControlName="tipoPersonajeDerecha">
                                     <mat-option value="npc">NPC</mat-option>
                                     <mat-option value="heroes">Heroes</mat-option>
+                                    <mat-option value="self">Self</mat-option>
                                 </mat-select>
                               </mat-form-field>
                               <mat-form-field appearance="legacy" class="formDuracion">
