--- a/src/app/comun/desarrollador/triggerComponent/trigger.component.html
+++ b/src/app/comun/desarrollador/triggerComponent/trigger.component.html
@@ -71,7 +71,7 @@
             <mat-form-field class="campo" appearance="legacy">
                 <mat-label>Operador</mat-label>
                 <mat-select formControlName="operador">
-                    <mat-option value="=">=</mat-option>
+                    <mat-option value="==">=</mat-option>
                     <mat-option value="!=">!=</mat-option>
                     <mat-option value="menor">Menor</mat-option>
                     <mat-option value="menorIgual">Menor-Igual</mat-option>
