Commit Pre Rework Performance InMap Isometrico

--- a/src/app/comun/desarrollador/formEventosComponent/formEventos.component.html
+++ b/src/app/comun/desarrollador/formEventosComponent/formEventos.component.html
@@ -411,8 +411,8 @@
                           </mat-form-field>
 
                           <mat-form-field appearance="legacy" class="formDuracion">
-                            <mat-label>Mazmorra ID</mat-label>
-                            <input matInput placeholder="" type="number" min="1" formControlName="mazmorraId">
+                            <mat-label>Mazmorra nombreID</mat-label>
+                            <input matInput placeholder="" formControlName="mazmorraId">
                           </mat-form-field>
 
                           <mat-form-field appearance="legacy" class="formDuracion">
