--- a/src/app/comun/panel-personaje/panel-personaje.component.html
+++ b/src/app/comun/panel-personaje/panel-personaje.component.html
@@ -50,7 +50,7 @@
                         [hechizos]="this.hechizos.hechizos"
                         [buff]="buff.buff"
                         [idHechizoSeleccionado]="hechizo.id"
-                        [renderHeroe]="this.sesion.render.heroes[indexHeroeSesion]">
+                        [estadisticas]="this.sesion.render.heroes[indexHeroeSesion].estadisticas">
                 </detalleHechizoComponent>
             </div>
     </div>
