--- a/src/app/comun/social/social.component.sass
+++ b/src/app/comun/social/social.component.sass
@@ -14,8 +14,8 @@
     position: absolute !important
     width: 50%
     height: 20%
-    min-width: 70vw
-    min-height: 80vh
+    min-width: 80vw
+    min-height: 95vh
     color: $colorTexto
     padding: 0
     overflow: initial
@@ -27,23 +27,23 @@
     color: $colorTexto
     background-color: $colorFondo2
 
-    .frame
-        position: absolute
-        top: 0 
-        left: 0 
-        padding-top: 5%
-        margin-top: -2.5%
-        padding-left: 3%
-        margin-left: -1.5%
-        width: 100%
-        height: 100%
-        background-image: url("../../../assets/Frames/Frame-Dialogo.png")
-        background-size: 100% 100% 
-
     .title
         margin-top: 20px
         width: 100%
         text-align: center
+    .botonAddAmigo
+        position: absolute
+        width: 20%
+        height: 10%
+        top: 5%
+        left: 5%
+
+    .botonCerrar
+        position: absolute
+        width: 20%
+        height: 10%
+        top: 5%
+        right: 5%
 
     .textoDialogo
         margin-top: 20px
@@ -75,7 +75,7 @@
     .contenedorOpciones
         position: relative
         width: 80%
-        height: 60%
+        height: 65%
         margin: 0 10%
         z-index: 10
         background-color: rgba(black,0.3)
@@ -118,14 +118,12 @@
                     justify-content: center
                     height: 100%
                     width: 20%
+                    margin: 0 auto
 
                     .botonInvitar
                         width: 100%
+                        height: 100% 
                         text-align: center
-                        height: 2rem
-                        border: 2px $colorTexto solid
-                        border-radius: 50px
-                        line-height: 1
 
                 .botonEliminar
                     position: relative
